@startuml BookingLifecycle
title Booking Lifecycle (State Machine)

state "Draft\n(下書き)" as DRAFT
state "Confirmed\n(確定)" as CONFIRMED
state "Cancelled\n(キャンセル)" as CANCELLED
state "Completed\n(完了)" as COMPLETED

[*] --> DRAFT : CreateBooking

DRAFT --> CONFIRMED : ConfirmBooking
DRAFT --> CANCELLED : CancelBooking

CONFIRMED --> COMPLETED : CompleteBooking
CONFIRMED --> CANCELLED : CancelBooking

CANCELLED --> [*]
COMPLETED --> [*]

note right of DRAFT
  - 作成直後は Draft
  - Draft の間は内容変更が可能
    （price/timeRange/menu/option/car など）
  - Draft の段階でも「枠確保」のため
    Googleカレンダー予定を作成してよい
    （calendarEventId を保持）
end note

note right of CONFIRMED
  - Confirmed は予約枠を確保した状態
  - Confirmed 後は原則内容変更しない
    （変更が必要な場合は別ユースケース）
  - キャンセルは可能（Confirmed -> Cancelled）

  - 確定後に「時間が増える変更」（剥がし追加・時間が長くなる施工への変更・リア追加など）が必要な場合は
    いったん NeedsReschedule 扱いとし、
    Googleカレンダーで枠を確保してから反映する
end note

note right of CANCELLED
  - 終端状態（ここから遷移しない）
  - Googleカレンダー予定が削除された場合も Cancelled 扱いにする（自動キャンセル）
end note

note right of COMPLETED
  - 終端状態（ここから遷移しない）
end note

@enduml
